# Mycroft

./: .gitignore  PAPER_DRAFT.md  README.md  analyze.py  api_fetcher.py  dashboard.html  diagnose_missing.py  enricher.py  market_adjusted.py  paper_stats.py  requirements.txt  returns_calc.py  scraper.py  server.py
AI_Portfolio_Analysis/SEC-EDGAR/: ai_investment_analysis_feasibility.md  edgar-fetcher.md
AI_Portfolio_Analysis/SEC-EDGAR-Feasibility/: edgar-fetcher.md  edgar_fetcher.py  filing_parser.py  manual_edgar_analyzer.py
AgentGuard Arena/: README.md
Core_Components/: README.md
Core_Components/AI_Talent_Flow_Intelligence/: README.md
Core_Components/Behavioral_Analysis/: README.md
Data_Quality_Agent/: phase-1-plan.md
Data_Quality_Agent/data-contract-agent/: README.md  pyproject.toml
Data_Quality_Agent/data-contract-agent/contract_agent/: cli.py  migration_parser.py  schema_model.py  semantic.py
Data_Quality_Agent/data-contract-agent/fixtures/: manifest.json
Data_Quality_Agent/data-contract-agent/fixtures/migrations/: 0003_subscriptions_amount.py  0004_subscription_status_paused.py
Data_Quality_Agent/data-contract-agent/fixtures/prs/: 0002_rename_signup_date.json  0005_add_user_phone.json
Data_Quality_Agent/data-contract-agent/tests/: conftest.py  test_lineage.py  test_migration_parser.py  test_semantic.py
Earnings_Call_Sentiment_Analyzer/: .gitignore  README.md  docker-compose.yml
Mycroft_Framework/: Mycroft Orchestration layer.md
Regulatory_QA_RAG/: .gitignore  README.md  docker-compose.yml
Regulatory_QA_RAG/Mycroft/Data_Quality_Agent/mock-analytics/: pyproject.toml
Regulatory_QA_RAG/Mycroft/Data_Quality_Agent/mock-analytics/models/: sources.yml
Regulatory_QA_RAG/Mycroft/Data_Quality_Agent/mock-analytics/models/marts/: _marts.yml  fct_engagement.sql  fct_mrr.sql  fct_revenue.sql
Regulatory_QA_RAG/Mycroft/Data_Quality_Agent/mock-analytics/models/staging/: _staging.yml  stg_accounts.sql  stg_events.sql  stg_subscriptions.sql
Regulatory_QA_RAG/Mycroft/Data_Quality_Agent/mock-app-service/: Dockerfile  docker-compose.yml  pyproject.toml
Regulatory_QA_RAG/Mycroft/Data_Quality_Agent/mock-app-service/alembic/: env.py
Regulatory_QA_RAG/Mycroft/Data_Quality_Agent/mock-app-service/alembic/versions/: 0001_initial.py
Regulatory_QA_RAG/Mycroft/Data_Quality_Agent/mock-app-service/app/: main.py
Regulatory_QA_RAG/Mycroft/Data_Quality_Agent/mock-app-service/app/api/: health.py
Regulatory_QA_RAG/Mycroft/Data_Quality_Agent/mock-app-service/app/models/: subscriptions.py  users.py
Regulatory_QA_RAG/Mycroft/Data_Quality_Agent/mock-app-service/scripts/: seed.py
n8n_Workflows/: Mycroft Forecasting Agent.json  README.md  Social_Sentiment_Agent  n8n-news-sentiment-agent.md
(+420 files in other folders)
