[project]
name = "data-contract-agent"
version = "0.1.0"
description = "Deterministic layer of the data contract agent: parses Alembic migrations, reconstructs column-level lineage from a dbt manifest, and reports which analytics models a schema change impacts."
requires-python = ">=3.11"
dependencies = [
    "sqlglot>=25.0",
    "click>=8.1",
    "anthropic>=0.40",
    "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
]

[project.scripts]
contract-agent = "contract_agent.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["contract_agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
