[project]
name = "mock-app-service"
version = "0.1.0"
description = "Operational backend half of the data contract agent demo. Schema lives here; downstream dbt models consume it."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13",
    "psycopg2-binary>=2.9",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    "faker>=30.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pyright>=1.1.380",
    "pytest>=8.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
